# AI-Salary-Predictor

./: README.md  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml
developer_salary_prediction/: .dockerignore  .gitignore  Claude.md  Dockerfile  Makefile  README.md  app.py  debug_prepare_features.py  diagnose_encoding.py  example_inference.py  guardrail_evaluation.py  pyproject.toml  requirements.txt  test_feature_impact.py  test_fix.py
developer_salary_prediction/config/: currency_rates.yaml  model_parameters.yaml  valid_categories.yaml
developer_salary_prediction/models/: model.pkl
developer_salary_prediction/src/: infer.py  preprocessing.py  schema.py  train.py
developer_salary_prediction/tests/: conftest.py  test_infer.py  test_preprocessing.py  test_schema.py
